@@ -457,20 +457,7 @@ struct ExtractTree
   
   
   typedef std::vector<rule_pair_type, std::allocator<rule_pair_type> >  rule_pair_list_type;
-  typedef std::vector<tree_rule_type, std::allocator<tree_rule_type> > tree_rule_set_type;
-
-  typedef utils::simple_vector<id_type, std::allocator<id_type> > edge_set_local_type;
-  
-  struct node_set_hash : public utils::hashmurmur<size_t>
-  {
-    size_t operator()(const edge_set_local_type& edges) const
-    {
-      return utils::hashmurmur<size_t>::operator()(edges.begin(), edges.end(), 0);
-    }
-  };
-
-  typedef utils::unordered_map<edge_set_local_type, rule_pair_list_type, node_set_hash, std::equal_to<edge_set_local_type>,
-			       std::allocator<std::pair<const edge_set_local_type, rule_pair_list_type> > >::type rule_pair_set_local_type;
+  typedef std::vector<tree_rule_type, std::allocator<tree_rule_type> > tree_rule_set_type;  
   
   struct DerivationGraph
   {
@@ -543,6 +530,11 @@ struct ExtractTree
       
       admissibles.clear();
       admissible_set_type(admissibles).swap(admissibles);
+
+      weights_inside.clear();
+      weights_outside.clear();
+      weight_set_type(weights_inside).swap(weights_inside);
+      weight_set_type(weights_outside).swap(weights_outside);
       
       alignment_map.clear();
       alignment_map_type(alignment_map).swap(alignment_map);
@@ -1483,7 +1475,6 @@ struct ExtractTree
     
     // first, compute span-mapping from target-side...
 
-    rule_pair_set_local_type rule_pairs_local;
     rule_pair_type rule_pair;
     
     range_tail_type range_tail;
